fix icon spacing in support section

--- a/style.css
+++ b/style.css
@@ -858,12 +858,7 @@ section contact
     vertical-align: middle;
 }
 
-#icon-paypal {
-    height: 1.825em;
-    margin-right: -5px;
-}
-
-#icon-paypal_ {
+#icon-paypal, #icon-paypal_ {
     height: 1.725em;
 }
 
